# grabba-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  project.json  pyproject.toml
tests/: test_index.py
